--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
+  "engines": {
+    "node": "8.9.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -9,15 +12,31 @@
   "dependencies": {
     "async": "^2.6.0",
     "body-parser": "~1.18.2",
+    "compression": "^1.7.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "moment": "^2.20.1",
+    "express-validator": "^4.3.0",
+    "helmet": "^3.9.0",
+    "moment": "^2.19.3",
+    "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
+    "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "nodemon": "^1.14.7"
-  }
+    "nodemon": "^1.12.5"
+  },
+  "description": "code lesson from https://developer.mozilla.org/en-US/docs/Learn/Server-side/Express_Nodejs/Displaying_data",
+  "main": "./bin/www",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ebbarbosa/express-locallibrary-tutorial.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ebbarbosa/express-locallibrary-tutorial/issues"
+  },
+  "homepage": "https://github.com/ebbarbosa/express-locallibrary-tutorial#readme"
 }
